feat: Rename project and update metadata
Updates the project name from "perfilpro-connect" to "terecomiendo" across package.json, index.html, and metadata.json. Also includes minor updates to dependencies and adds a description to package.json.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PerfilPro Connect</title>
-    <script src="https://js.stripe.com/v3/"></script>
+    <title>teRecomiendo</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script type="importmap">
 {
@@ -16,7 +15,8 @@
     "firebase/app": "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js",
     "firebase/auth": "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js",
     "firebase/firestore": "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js",
-    "firebase/": "https://aistudiocdn.com/firebase@^12.5.0/"
+    "firebase/storage": "https://www.gstatic.com/firebasejs/10.12.2/firebase-storage.js",
+    "firebase/": "https://aistudiocdn.com/firebase@^12.6.0/"
   }
 }
 </script>
